--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,7 @@ p + p {
 .project_container {
     display: flex;
     flex-direction: row;
+    height: 26rem;
 }
 
 .project_container + .project_container {
@@ -79,8 +80,6 @@ p + p {
 
 .project_container img {
     max-width: 50rem;
-    max-height: 22.7rem;
-
     width: 100%;
     height: 100%;
 
@@ -89,7 +88,6 @@ p + p {
 
 .project_content {
     flex: 1;
-    max-height: 22.7rem;
     background: #312e38;
     color: #fff;
     margin-left: 5px;
@@ -100,7 +98,20 @@ p + p {
     flex-direction: column;
     padding: 1rem;
 
+}
 
+
+
+ .project_content p {
+    overflow: hidden;        
+    text-overflow: ellipsis ellipsis ;
+    margin-bottom: 1rem;
+}
+
+
+.project_content span {
+    font-size: 1.8rem;
+    align-self: center;
 }
 
 .button_container  {
@@ -130,22 +141,11 @@ p + p {
     margin-left: 2rem;
 }
 
-
-.project_content p {
-    text-overflow: ellipsis;
-    overflow: hidden;              
-}
-
-.project_content span {
-    font-size: 1.8rem;
-    align-self: center;
-}
-
 ul {
-    margin-left: 25px;
+    margin-left: 2.5rem;
     margin-top: 0.5rem;
     display: grid;
-    grid-template-columns: 40% 50%;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 
@@ -160,7 +160,7 @@ a:hover {
 }
 
 
-@media(max-width: 830px) {
+@media(max-width: 850px) {
     .project_container {
         display: flex;
         flex-direction: column;
@@ -190,7 +190,7 @@ a:hover {
     }
 }
 
-@media(max-width: 530px) {
+@media(max-width: 550px) {
     header {
         flex-direction: column;
     }
