--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,12 +159,22 @@ a:hover {
     opacity: 0.5;
 }
 
+@media(max-width: 950px) {
+
+    .project_container {
+        height: 23rem;
+    }
+
+    .project_container img {       
+        max-width: 44rem;
+    }
+}
 
 @media(max-width: 850px) {
     .project_container {
         display: flex;
         flex-direction: column;
-        margin: 0;
+        height: 100%;
     }
 
     .project_content {
@@ -199,7 +209,7 @@ a:hover {
         order: -1;
         margin-bottom: 12px;
     }
-
+    
     .project_content {
         width: 100%;
     }    
